@@ -28,6 +28,9 @@ distclean:
 src/String/o/translated.o: src/String/translated.cc src/String/String.ih src/Preprocessor/foreach.hh src/String/String.hh
 	$(CC) $(CCADDFLAGS)  -c -o "src/String/o/translated.o" "src/String/translated.cc" 
 
+src/String/o/toUpper.o: src/String/toUpper.cc src/String/String.ih src/Preprocessor/foreach.hh src/String/String.hh
+	$(CC) $(CCADDFLAGS)  -c -o "src/String/o/toUpper.o" "src/String/toUpper.cc" 
+
 src/Globals/o/statics.o: src/Globals/statics.cc src/Globals/Globals.ih src/Globals/Globals.hh
 	$(CC) $(CCADDFLAGS)  -c -o "src/Globals/o/statics.o" "src/Globals/statics.cc" 
 
@@ -148,6 +151,6 @@ src/Metalink/o/from.o: src/Metalink/from.cc src/Metalink/Metalink.ih src/Globals
 src/o/metalink.o: src/o/ src/metalink.cc src/Preprocessor/debug.hh src/String/String.hh src/Globals/Globals.hh src/Hash/HashPieces/HashPieces.hh src/Preprocessor/foreach.hh src/Hash/Hash.hh src/Hash/HashGNUnet/HashGNUnet.hh src/Hash/HashGNUnet/SessionKey/SessionKey.hh src/Hash/HashSHA512/HashSHA512.hh src/Hash/GCrypt/GCrypt.hh src/Hash/HashED2K/HashED2K.hh src/Hash/HashMD4/HashMD4.hh src/HashList/HashList.hh src/MD5File/MD5File.hh src/MetalinkFile/MetalinkFile.hh src/MirrorList/MirrorList.hh src/Mirror/Mirror.hh src/Metalink/Metalink.hh
 	$(CC) $(CCADDFLAGS)  -c  -o "src/o/metalink.o" "src/metalink.cc" 
 
-src/metalink: src/Globals/o/ src/Hash/GCrypt/o/ src/Hash/HashCRC32/o/ src/Hash/HashED2K/o/ src/Hash/HashGNUnet/SessionKey/o/ src/Hash/HashGNUnet/o/ src/Hash/HashPieces/o/ src/Hash/o/ src/HashList/o/ src/MD5File/o/ src/Metalink/o/ src/MetalinkFile/o/ src/Mirror/o/ src/MirrorList/o/ src/String/o/ src/o/  src/String/o/translated.o src/Globals/o/statics.o src/Globals/o/XMLSafe.o src/Globals/o/XMLQuotedSafe.o src/Hash/HashPieces/o/xml.o src/Hash/HashPieces/o/value.o src/Hash/HashPieces/o/update.o src/Hash/HashPieces/o/finalize.o src/Hash/HashPieces/o/HashPieces.o src/Hash/GCrypt/o/value.o src/Hash/GCrypt/o/update.o src/Hash/GCrypt/o/name.o src/Hash/GCrypt/o/from.o src/Hash/GCrypt/o/finalize.o src/Hash/o/xml.o src/Hash/HashGNUnet/o/value.o src/Hash/HashGNUnet/o/update.o src/Hash/HashGNUnet/o/pushChk.o src/Hash/HashGNUnet/o/gnunettisch.o src/Hash/HashGNUnet/o/finalize.o src/Hash/HashGNUnet/o/encryptBlock.o src/Hash/HashGNUnet/o/blockKeyAndQuery.o src/Hash/HashGNUnet/o/blockKey.o src/Hash/HashGNUnet/o/HashGNUnet.o src/Hash/HashGNUnet/SessionKey/o/statics.o src/Hash/HashGNUnet/SessionKey/o/fromHash.o src/Hash/HashCRC32/o/from.o src/Hash/HashED2K/o/value.o src/Hash/HashED2K/o/update.o src/Hash/HashED2K/o/finalize.o src/HashList/o/update.o src/HashList/o/finalize.o src/HashList/o/destroyMembers.o src/MD5File/o/record.o src/MetalinkFile/o/finalize.o src/MetalinkFile/o/addPath.o src/MirrorList/o/MirrorList.o src/Mirror/o/asXMLWithFile.o src/Mirror/o/Mirror.o src/Metalink/o/from.o src/o/metalink.o
-	$(CC) $(CCADDFLAGS)  "src/String/o/translated.o" "src/Globals/o/statics.o" "src/Globals/o/XMLSafe.o" "src/Globals/o/XMLQuotedSafe.o" "src/Hash/HashPieces/o/xml.o" "src/Hash/HashPieces/o/value.o" "src/Hash/HashPieces/o/update.o" "src/Hash/HashPieces/o/finalize.o" "src/Hash/HashPieces/o/HashPieces.o" "src/Hash/GCrypt/o/value.o" "src/Hash/GCrypt/o/update.o" "src/Hash/GCrypt/o/name.o" "src/Hash/GCrypt/o/from.o" "src/Hash/GCrypt/o/finalize.o" "src/Hash/o/xml.o" "src/Hash/HashGNUnet/o/value.o" "src/Hash/HashGNUnet/o/update.o" "src/Hash/HashGNUnet/o/pushChk.o" "src/Hash/HashGNUnet/o/gnunettisch.o" "src/Hash/HashGNUnet/o/finalize.o" "src/Hash/HashGNUnet/o/encryptBlock.o" "src/Hash/HashGNUnet/o/blockKeyAndQuery.o" "src/Hash/HashGNUnet/o/blockKey.o" "src/Hash/HashGNUnet/o/HashGNUnet.o" "src/Hash/HashGNUnet/SessionKey/o/statics.o" "src/Hash/HashGNUnet/SessionKey/o/fromHash.o" "src/Hash/HashCRC32/o/from.o" "src/Hash/HashED2K/o/value.o" "src/Hash/HashED2K/o/update.o" "src/Hash/HashED2K/o/finalize.o" "src/HashList/o/update.o" "src/HashList/o/finalize.o" "src/HashList/o/destroyMembers.o" "src/MD5File/o/record.o" "src/MetalinkFile/o/finalize.o" "src/MetalinkFile/o/addPath.o" "src/MirrorList/o/MirrorList.o" "src/Mirror/o/asXMLWithFile.o" "src/Mirror/o/Mirror.o" "src/Metalink/o/from.o" "src/o/metalink.o" -lgcrypt -lgpg-error -lboost_regex -lboost_filesystem -lboost_program_options -o "src/metalink" 
+src/metalink: src/Globals/o/ src/Hash/GCrypt/o/ src/Hash/HashCRC32/o/ src/Hash/HashED2K/o/ src/Hash/HashGNUnet/SessionKey/o/ src/Hash/HashGNUnet/o/ src/Hash/HashPieces/o/ src/Hash/o/ src/HashList/o/ src/MD5File/o/ src/Metalink/o/ src/MetalinkFile/o/ src/Mirror/o/ src/MirrorList/o/ src/String/o/ src/o/  src/String/o/translated.o src/String/o/toUpper.o src/Globals/o/statics.o src/Globals/o/XMLSafe.o src/Globals/o/XMLQuotedSafe.o src/Hash/HashPieces/o/xml.o src/Hash/HashPieces/o/value.o src/Hash/HashPieces/o/update.o src/Hash/HashPieces/o/finalize.o src/Hash/HashPieces/o/HashPieces.o src/Hash/GCrypt/o/value.o src/Hash/GCrypt/o/update.o src/Hash/GCrypt/o/name.o src/Hash/GCrypt/o/from.o src/Hash/GCrypt/o/finalize.o src/Hash/o/xml.o src/Hash/HashGNUnet/o/value.o src/Hash/HashGNUnet/o/update.o src/Hash/HashGNUnet/o/pushChk.o src/Hash/HashGNUnet/o/gnunettisch.o src/Hash/HashGNUnet/o/finalize.o src/Hash/HashGNUnet/o/encryptBlock.o src/Hash/HashGNUnet/o/blockKeyAndQuery.o src/Hash/HashGNUnet/o/blockKey.o src/Hash/HashGNUnet/o/HashGNUnet.o src/Hash/HashGNUnet/SessionKey/o/statics.o src/Hash/HashGNUnet/SessionKey/o/fromHash.o src/Hash/HashCRC32/o/from.o src/Hash/HashED2K/o/value.o src/Hash/HashED2K/o/update.o src/Hash/HashED2K/o/finalize.o src/HashList/o/update.o src/HashList/o/finalize.o src/HashList/o/destroyMembers.o src/MD5File/o/record.o src/MetalinkFile/o/finalize.o src/MetalinkFile/o/addPath.o src/MirrorList/o/MirrorList.o src/Mirror/o/asXMLWithFile.o src/Mirror/o/Mirror.o src/Metalink/o/from.o src/o/metalink.o
+	$(CC) $(CCADDFLAGS)  "src/String/o/translated.o" "src/String/o/toUpper.o" "src/Globals/o/statics.o" "src/Globals/o/XMLSafe.o" "src/Globals/o/XMLQuotedSafe.o" "src/Hash/HashPieces/o/xml.o" "src/Hash/HashPieces/o/value.o" "src/Hash/HashPieces/o/update.o" "src/Hash/HashPieces/o/finalize.o" "src/Hash/HashPieces/o/HashPieces.o" "src/Hash/GCrypt/o/value.o" "src/Hash/GCrypt/o/update.o" "src/Hash/GCrypt/o/name.o" "src/Hash/GCrypt/o/from.o" "src/Hash/GCrypt/o/finalize.o" "src/Hash/o/xml.o" "src/Hash/HashGNUnet/o/value.o" "src/Hash/HashGNUnet/o/update.o" "src/Hash/HashGNUnet/o/pushChk.o" "src/Hash/HashGNUnet/o/gnunettisch.o" "src/Hash/HashGNUnet/o/finalize.o" "src/Hash/HashGNUnet/o/encryptBlock.o" "src/Hash/HashGNUnet/o/blockKeyAndQuery.o" "src/Hash/HashGNUnet/o/blockKey.o" "src/Hash/HashGNUnet/o/HashGNUnet.o" "src/Hash/HashGNUnet/SessionKey/o/statics.o" "src/Hash/HashGNUnet/SessionKey/o/fromHash.o" "src/Hash/HashCRC32/o/from.o" "src/Hash/HashED2K/o/value.o" "src/Hash/HashED2K/o/update.o" "src/Hash/HashED2K/o/finalize.o" "src/HashList/o/update.o" "src/HashList/o/finalize.o" "src/HashList/o/destroyMembers.o" "src/MD5File/o/record.o" "src/MetalinkFile/o/finalize.o" "src/MetalinkFile/o/addPath.o" "src/MirrorList/o/MirrorList.o" "src/Mirror/o/asXMLWithFile.o" "src/Mirror/o/Mirror.o" "src/Metalink/o/from.o" "src/o/metalink.o" -lgcrypt -lgpg-error -lboost_regex -lboost_filesystem -lboost_program_options -o "src/metalink" 
 
