@@ -1,0 +1,5 @@
+#include "String.ih"
+void String::toUpper()
+{
+	transform(this->begin(), this->end(), this->begin(), toupper);	
+}
